[package]
name = "halo2-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
# anyhow = "1.0.75"
# log = "0.4.20"
halo2 = { git = "https://github.com/csirlin/halo2.git" }
halo2_proofs = { git = "https://github.com/csirlin/halo2.git" }
halo2_gadgets = { git = "https://github.com/csirlin/halo2.git" }
# serde_json = "1.0.108"
ff = "0.13.0"
pasta_curves = "0.5.1"
plotters = "0.3.5"
rand_core = "0.6.4"